# iot-device-gateway-demo

./: .gitignore  .gitmodules  Makefile.am  README.md  build.sh  clean.sh  configure.ac  libtool  run.sh
src/: Makefile.am  bkv.c  bkv.h  common.c  common.h  config.h  iot_client.c  iot_client.h  json.c  json.h  main.c  mqtt_client.c  mqtt_client.h  test_bkv.sh
src/.deps/: gateway-bkv.Po  gateway-common.Po  gateway-iot_client.Po  gateway-main.Po  gateway-mqtt.Po  gateway-mqtt_client.Po
src/test.dSYM/Contents/Resources/DWARF/: test
