#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gateway-demo], [0.0.1], [sinfere@gmail.com])
# AC_CONFIG_SRCDIR([])
# AC_CONFIG_HEADERS([])
AM_INIT_AUTOMAKE([subdir-objects foreign -Wno-gnu -Werror])

# Checks for programs.
AC_PROG_CC
# AC_PROG_INSTALL

LT_INIT

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile libmqtt/Makefile])
AC_OUTPUT
